--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2273,7 +2273,7 @@ input, select, textarea {
 
 			.panel > *.color2-alt {
 				background-size: 128px 128px, auto;
-				background-color: #de7172;
+				background-color: #ffffff;
 			}
 
 			.panel > *.color3-alt {
@@ -2765,7 +2765,7 @@ input, select, textarea {
 
 		.panel.color2 {
 			background-size: 128px 128px, auto;
-			background-color: #e37b7c;
+			background-color: #ffffff;
 		}
 
 		.panel.color3 {
@@ -2785,7 +2785,7 @@ input, select, textarea {
 
 		.panel.color2-alt {
 			background-size: 128px 128px, auto;
-			background-color: #de7172;
+			background-color: #ffffff;
 		}
 
 		.panel.color3-alt {
@@ -2815,7 +2815,7 @@ input, select, textarea {
 
 			.panel > *.color2 {
 				background-size: 128px 128px, auto;
-				background-color: #e37b7c;
+				background-color: #ffffff;
 			}
 
 			.panel > *.color3 {
@@ -2835,7 +2835,7 @@ input, select, textarea {
 
 			.panel > *.color2-alt {
 				background-size: 128px 128px, auto;
-				background-color: #de7172;
+				background-color: #ffffff;
 			}
 
 			.panel > *.color3-alt {
