--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,6 +205,7 @@ input, select, textarea {
 		height: 100%;
 		min-height: 30rem;
 		overflow: hidden;
+		overscroll-behavior-x: none;
 	}
 
 		body:before {
