--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,6 +87,10 @@ body {
 	-webkit-text-size-adjust: none;
 }
 
+.major {
+	color: black;
+}
+
 mark {
 	background-color: transparent;
 	color: inherit;
