--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ hr{
 	.logo{
 		font-size: 32px;
 		line-height: 32px;
-		size: ;
+		size: 100px;
 	}
 	.contentbig{
 		margin-bottom: 180px;
@@ -316,19 +316,25 @@ hr{
 
 @media screen and (max-width: 800px) {
 	.navright{
-		display: none;
 		color: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+		font-size: 8px;
+		width: 100px;
+		display: none;
 	}
 	.nav.m{
 		height: 70px;
-		padding: 0;
-		padding: 6% 6% 6% 6%;
+		padding: 20;
+		width: 20px;
+	}
+
+	.nav{
+		padding: 4%;
 	}
 	.logo{
 		font-size: 30px;
 		    font-weight: 700;
 		    line-height: 60px;
-			width: 150PX;
+			width: 100PX;
 	}
 	
 	.navright.m{
@@ -375,11 +381,11 @@ hr{
 	}
 	
 	.contenttop{
-		font-size: 21px;
+		font-size: 18px;
 		margin: 60px 0;
 	}
 	.contentbig{
-		font-size: 36px;
+		font-size: 28px;
 		margin-bottom: 100px;
 	}
 	
@@ -482,9 +488,10 @@ hr{
 	}
 	
 	.footer {
-	    margin: 50px 0;
+	    margin:24px 0;
 		width: 100%;
-		padding: 6% 6% 16% 6%;
+		padding: 6% 6% 12% 6%;
+		vertical-align: bottom;
 	}
 	
 	.footerleft {
@@ -498,8 +505,24 @@ hr{
 	}
 
 	.footer span{
-		padding-bottom: 10%
+		padding-bottom: 2%
 	}
+
+	.footer h2{
+		font-size: 30px;
+		line-height: 60px;
+	}
+	
+	.footer h3{
+		font-size: 16px;
+		line-height: 24px;
+	}
+	
+	.footer h4{
+		text-align: right;
+		font-weight: 300;
+		font-size: 10px;
+		color: #bdbdbd;
 }
 
 
