--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,6 @@ hr{
 	.logo{
 		font-size: 32px;
 		line-height: 32px;
-		size: 100px;
 	}
 	.contentbig{
 		margin-bottom: 180px;
@@ -316,46 +315,36 @@ hr{
 
 @media screen and (max-width: 800px) {
 	.navright{
-		color: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-		font-size: 8px;
-		width: 100px;
 		display: none;
+		color: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
 	}
 	.nav.m{
 		height: 70px;
-		padding: 20;
-		width: 20px;
-	}
-
-	.nav{
-		padding: 4%;
+		padding: 16px;
 	}
 	.logo{
 		font-size: 30px;
-		    font-weight: 700;
-		    line-height: 60px;
 			width: 100PX;
+			padding-top: 4%;
 	}
 	
+	.nav{
+		display: block;
+	}
 	.navright.m{
 		display: block;
 		margin-top: 14px;
-		padding-right: 0;
+		padding-right: 16px;
+		width: 60px;
 	}
 	
 	.topnav{
-		    display: block;
+		    display: none;
 		    width: 100%;
 		    box-sizing: border-box;
-		    background-color: #ffc700;
-		    font-weight: bold;
-		    color: black;
-		    position: fixed;
-		    height: 60%;
-		    top: 0px;
+		    height: 100%;
 		    z-index: 999;
 		    background-size: cover;
-			padding-top: 5%;
 	}
 	
 	.navlist{
@@ -381,13 +370,17 @@ hr{
 	}
 	
 	.contenttop{
-		font-size: 18px;
-		margin: 60px 0;
+		font-size: 21px;
+		margin: 30px 0;
+		padding-top: 20px;
 	}
 	.contentbig{
 		font-size: 28px;
-		margin-bottom: 100px;
+		margin-bottom: 30px;
+		line-height: 40px;
 	}
+
+
 	
 	.mypic li{
 		width: 49%;
@@ -413,6 +406,7 @@ hr{
 	    width: 100%;
 	    float: none;
 	    margin-right: 0;
+		display: none;
 	}
 	
 	.second {
@@ -420,7 +414,7 @@ hr{
 	    float: none;
 	    margin-right: 0;
 	    font-weight: 700;
-	    margin: 40px 0;
+	    margin: 20px 0;
 		
 	}
 	
@@ -488,41 +482,39 @@ hr{
 	}
 	
 	.footer {
-	    margin:24px 0;
+	    margin: 50px 0;
 		width: 100%;
-		padding: 6% 6% 12% 6%;
-		vertical-align: bottom;
+		padding: 6% 6% 6% 6%;
 	}
 	
+	.footer h3{
+		font-size: 16px;
+		line-height: 22px;
+	}
+
+	.footer h2{
+		font-size: 24px;
+		line-height: 28px;
+	}
+
+	.footer h4{
+		font-size: 10px;
+		line-height: 16px;
+	}
+
 	.footerleft {
 	    width: 100%;
 	    text-align: center;
 	    font-size: 20px;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 	}
 	.footerright{
 		font-size: 14px;
 	}
 
 	.footer span{
-		padding-bottom: 2%
+		padding-bottom: 5%
 	}
-
-	.footer h2{
-		font-size: 30px;
-		line-height: 60px;
-	}
-	
-	.footer h3{
-		font-size: 16px;
-		line-height: 24px;
-	}
-	
-	.footer h4{
-		text-align: right;
-		font-weight: 300;
-		font-size: 10px;
-		color: #bdbdbd;
 }
 
 
